--- a/package.json
+++ b/package.json
@@ -20,23 +20,23 @@
     "@react-navigation/native-stack": "^6.1.0",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.72.2",
-    "expo": "^53.0.0",
+    "expo": "~53.0.24",
     "expo-asset": "~11.1.7",
     "expo-constants": "~17.1.7",
     "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.2",
     "expo-splash-screen": "~0.30.10",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.10",
+    "expo-system-ui": "~5.0.11",
     "expo-updates": "~0.28.17",
     "expo-web-browser": "~14.2.0",
     "financejs": "^4.1.0",
     "jest": "~29.7.0",
-    "jest-expo": "^53.0.0",
+    "jest-expo": "~53.0.10",
     "prop-types": "^15.8.1",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.5",
+    "react-native": "0.79.6",
     "react-native-bouncy-checkbox": "^3.0.7",
     "react-native-google-mobile-ads": "^14.7.2",
     "react-native-haptic-feedback": "^2.2.0",
